Update API, tests and samples